Truncate address overflow Resolves #14

--- a/resources/public/css/style.main.less
+++ b/resources/public/css/style.main.less
@@ -316,6 +316,13 @@ form {
   }
 }
 
+.active-account {
+  overflow: hidden;
+  width: 100%;
+  text-overflow: ellipsis;
+
+}
+
 .select-menu {
   position: relative;
   z-index: 2;
@@ -328,7 +335,7 @@ form {
     color: @bcblue;
     width: 100%;
     height: 38px;
-    padding: 11px 45px 12px 20px;
+    padding: 11px 10px 12px 20px;
     text-align: left;
     overflow: visible;
     position: relative;
